# matrice_library

./: .gitignore  CMakeLists.txt  README.md  compile.sh  matrice.cpp
examples/: example_matrice.cpp
